minor edits to pricing and welcome

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -91,8 +91,7 @@
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Settings &nbsp;&nbsp; <i class="fa fa-cog"></i>
-
+                  Settings
                 </a>
               </h4>
             </div>
@@ -126,7 +125,7 @@
           <h4 class="panel-title">
             <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               <%= form_for @user, role: 'form' do |f| %>
-              Open Data Kit &nbsp;&nbsp; <i class="fa fa-wrench"></i>
+              Open Data Kit
             </a>
           </h4>
         </div>
@@ -156,7 +155,7 @@
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             <%= form_for @user, role: 'form' do |f| %>
-            Salesforce.com &nbsp;&nbsp; <i class="fa fa-wrench"></i>
+            Salesforce.com
         </a>
       </h4>
     </div>
