Hide View and Reprocess buttons on Submissions page only if failed.

--- a/app/views/submissions/_submission.html.erb
+++ b/app/views/submissions/_submission.html.erb
@@ -3,12 +3,9 @@
   <th><%= submission.created_at %></th>
   <th><%= submission.state %></th>
   <th>
-
-<!-- Howdy Stu, can you please make this button only appear when :state == :error ???-->
-
-  	<%= link_to "View", [ @mapping, submission], class: 'btn btn-primary' %>
+    <%= link_to "View", [ @mapping, submission], class: 'btn btn-primary' if submission.error? %>
   </th>
   <th>
-	<%= link_to "Reprocess", [:reprocess, @mapping, submission], class: 'btn btn-danger', method: 'post', confirm: 'Are you sure?' if submission.error? %>
+    <%= link_to "Reprocess", [:reprocess, @mapping, submission], class: 'btn btn-danger', method: 'post', confirm: 'Are you sure?' if submission.error? %>
   </th>
 </tr>
