--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -81,13 +81,14 @@
     <br>  
 
     <div class="container">
-      <table class='table'>
+      <table class='table table-striped'>
         <thead>
           <tr>
-            <th>No.</th>
+            <th>Source: Table</th>
+            <th>Destination</th>
             <th>Label</th>
             <th>Enabled?</th>
-            <th>Auto collect?</th>
+            <th>Auto sync</th>
             <th>History</th>
             <th>Destroy</th>
           </tr>
