--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -88,6 +88,10 @@ b, strong {
   padding: 0;
 }
 
+.btn-map-label {
+  padding-left: 2px;
+}
+
 .table tbody tr > td.success {
   background-color: inherit;
   color: #5CB85C !important;
