--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-2 text-center">
           <div class="content">
-            Subscription Tier:
+            Subscription Tier
           </div>
           <h4 class="title">
             Small
@@ -35,7 +35,7 @@
         </div>
         <div class="col-md-3 text-center">
           <div class="content">
-            Active:
+            Maps
           </div><br>
           <div class="progress">
             <div class="progress-bar " role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-4 text-center">
           <div class="content">
-            Submissions:
+            Jobs
           </div><br>
           <div class="progress">
             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100" style="width: 83%;">
@@ -84,13 +84,13 @@
       <table class='table table-striped'>
         <thead>
           <tr>
-            <th>Source: Table</th>
-            <th>Destination</th>
             <th>Label</th>
-            <th>Enabled?</th>
-            <th>Auto sync</th>
-            <th>History</th>
-            <th>Destroy</th>
+            <th>Source <i class="fa fa-cube"></i></th>
+            <th>Destination <i class="fa fa-cube"></th>
+            <th align="center" >Enabled?</th>
+            <th align="center" >Auto sync</th>
+            <th align="center" >History</th>
+            <th align="center">Destroy</th>
           </tr>
         </thead>
         <tbody>
