--- a/app/views/mappings/_mapping.html.erb
+++ b/app/views/mappings/_mapping.html.erb
@@ -1,11 +1,18 @@
 <!-- <tr class="<% if mapping.active? %> success <% end %>"> -->
 <tr>  
-  <td><%=mapping.id %></td>
   <td>
-    <%= link_to mapping, class: "btn btn-meh" do %><%=mapping.name %><% end %>
+    <%= link_to mapping, class: "btn btn-map-label" do %>
+      <i class="fa fa-pencil-square-o fa-lg"></i><%=mapping.name %>
+    <% end %>
   </td>
-  
-  <td class="<% if mapping.enabled? %> success <% end %>">
+  <td>
+    ODK "<%= mapping.odk_form.name %>"</i>
+  </td>
+  <td>
+    Salesforce.com
+  </td>
+   
+  <td align="center" class="<% if mapping.enabled? %> success <% end %>">
     <% if mapping.enabled? %>
       <i class="fa fa-check-circle fa-lg"></i>
     <% else %>
@@ -13,25 +20,23 @@
     <% end %>
   </td>
 
-  <td class="<% if mapping.active? %> success <% end %>">
+  <td align="center" class="<% if mapping.active? %> success <% end %>">
     <% if mapping.active? %>
-      <i class="fa fa-check-circle fa-lg"></i>
+      <i class="fa fa-bolt fa-lg"></i>
     <% else %>
       
     <% end %>
   </td>
-  <td>
+  <td align="center">
     <% if mapping.import %>
-      <%= link_to [mapping, :submissions], class: 'btn btn-meh' do %>
+      <%= link_to [mapping, :submissions], class: 'btn btn-map-label' do %>
         <i class="fa fa-history fa-lg"></i>
       <% end%>
     <% end%>
   </td>
 
-  <td>
-    <%= link_to mapping, method: 'delete', class: 'btn btn-meh', data: { confirm: 'Are you sure you want to delete this map?'} do %>
-      <i class="fa fa-trash-o fa-lg"></i>
-    <% end %>
+  <td align="center">
+    <%= link_to mapping, method: 'delete', class: 'btn btn-map-label', data: { confirm: 'Are you sure you want to delete this map?'} do %><i class="fa fa-trash-o fa-lg"></i><% end %>
 
   </td>
 </tr>
