--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -38,7 +38,7 @@
   <thead>
     <tr>
       <th>Submission ID</th>
-      <th>Date & Time</th>
+      <th>Date &amp; Time</th>
       <th>Status</th>
       <th>Inspect</th>
       <th>Try again</th>
