--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -16,9 +16,9 @@
   <div class='pull-left'>
     <%= form_tag dispatch_surveys_mapping_path(@mapping), class: 'form-inline', role: 'form' do %>
       <div class="form-group">
-        <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'No. of submissions to import' %>
+        <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'No. of jobs' %>
       </div>
-      <%= submit_tag "Import", class: "import-button btn btn-success #{@mapping.enabled? ? '' : 'disabled'}" %>
+      <%= submit_tag "Manual Test", class: "import-button btn btn-success #{@mapping.enabled? ? '' : 'disabled'}" %>
     <% end %>
   </div>
 
