--- a/app/views/submissions/_submission.html.erb
+++ b/app/views/submissions/_submission.html.erb
@@ -1,11 +1,11 @@
 <tr>
-  <th><%= submission.uuid %></th>
-  <th><%= submission.created_at %></th>
-  <th><%= submission.state %></th>
-  <th>
-    <%= link_to "View", [ @mapping, submission], class: 'btn btn-primary' if submission.error? %>
-  </th>
-  <th>
+  <td><div class="btn btn-map-label disabled"><%= submission.uuid %></div></td>
+  <td><%= submission.created_at %></td>
+  <td><%= submission.state %></td>
+  <td>
+    <%= link_to "View", [ @mapping, submission], class: 'btn btn-default' if submission.error? %>
+  </td>
+  <td>
     <%= link_to "Reprocess", [:reprocess, @mapping, submission], class: 'btn btn-danger', method: 'post', confirm: 'Are you sure?' if submission.error? %>
-  </th>
+  </td>
 </tr>
