--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -40,49 +40,52 @@
       <div class="panel-body"> -->
 
 <% if current_user %> 
+      <div class="row">
 
-        <div class="col-md-6 text-center">
+        <div class="col-md-4">
           <h1><%= @user.credits %></h1>
           <h4>Credits</h4>
         </div>
-        <div class="col-md-6 text-center">
+
+        <div class="col-md-4">
           <h1><%= @user.mappings.enabled.count %></h1>
           <h4>Enabled Mappings</h4>
         </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="paypal-button">
-              <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
-                <input type="hidden" name="custom" value="<%= @user.id %>">
-                <table>
-                  <tr>
-                    <td>
-                        <input type="hidden" name="on0" value="Credits">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <select name="os0" class="form-control">
-                        <option value="6 Months">6 Months $50.00 USD</option>
-                        <option value="12 Months">12 Months $75.00 USD</option>
-                      </select>
-                    </td>
-                  </tr>
-                </table>
-                <input type="hidden" name="currency_code" value="USD">
-                <br/>
-                <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-              </form>
-            </div>
-            <div class="col-md-12"><br>
-              <p>Purchase credits for either 6 or 12 months at a time. After clicking "buy now" you'll be asked to specify the quantity. Each credit allows a single mapping to be enabled.</p> 
-              <p>We are shortly shifting to a more user-friendly payment system. Please bear with us in the interim!</p>    
-            </div>
+        
+        <div class="col-md-4">
+          <div class="paypal-button">
+            <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
+              <input type="hidden" name="custom" value="<%= @user.id %>">
+              <table>
+                <tr>
+                  <td>
+                      <input type="hidden" name="on0" value="Credits">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <select name="os0" class="form-control">
+                      <option value="6 Months">6 Months $50.00 USD</option>
+                      <option value="12 Months">12 Months $75.00 USD</option>
+                    </select>
+                  </td>
+                </tr>
+              </table>
+              <input type="hidden" name="currency_code" value="USD">
+              <br/>
+              <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+              <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            <br>
           </div>
+          <!-- <div class="col-md-12"><br>
+            <p>Purchase credits for either 6 or 12 months at a time. After clicking "buy now" you'll be asked to specify the quantity. Each credit allows a single mapping to be enabled.</p> 
+            <p>We are shortly shifting to a more user-friendly payment system. Please bear with us in the interim!</p>    
+          </div> -->
         </div>
+      </div>
 
 <% end %>
 
