--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -193,10 +193,14 @@
 
 <!-- There is no need for the user to enter this each time. It's ALWAYS login.salesforce.com and I don't know how to set the default value from the back-end, so I'm passing it through this hidden input form group. - TD -->
 
-          <div class="form-group hidden">
-            <%= f.label :sf_host, "Host" %>
-            <%= f.text_field :sf_host, :value => "login.salesforce.com" %>
-          </div>
+          <div class="form-group">
+            <%= f.label :sf_host, "Salesforce Org Type (usually production)" %>&nbsp;
+            <%= f.select :sf_host, class: 'form-control' do %>
+              <% [['Production', "login.salesforce.com"], ['Sandbox', "test.salesforce.com"]].each do |c| -%>
+                <%= content_tag(:option, c.first, value: c.last) %>
+              <% end %>
+            <% end %>
+            </div>
           <%= f.submit "Update", class: 'btn btn-primary' %>
           <% end %>
         </div>
