--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -177,13 +177,41 @@
           </div>
 
           <div class="form-group">
+            <a data-toggle="collapse" data-parent="#accordion21" href="#collapseTwoOne">
             <%= f.label :sf_security_token, "Security Token" %>
+            <i class="fa fa-question-circle"></i>
+            </a>
             <%= f.text_field :sf_security_token, class: 'form-control' %>
+            <div id="collapseTwoOne" class="panel-collapse collapse"><br>
+              <p>1. Search “security token” in your email to see if you've received a security token in the past. (If you have, go to step 5.)</p>
+              <p>2. To reset or create a new security token, click your name and “Setup” in Salesforce</p>
+              <p>3. Go to “Personal Information” and click “reset your security token”.</p>
+              <p>4. Read the warnings, then click “Reset Security Token”.</p>
+              <p>5. Copy your security token from your email and paste it here.</p>
+            </div>
           </div>
-
+          
           <div class="form-group">
-            <%= f.label :sf_app_key, "Consumer Key" %>
+            <a data-toggle="collapse" data-parent="#accordion21" href="#collapseTwoTwo">
+              <%= f.label :sf_app_key, "Consumer Key" %>
+              <i class="fa fa-question-circle"></i>
+            </a>
             <%= f.text_field :sf_app_key, class: 'form-control' %>
+            <div id="collapseTwoTwo" class="panel-collapse collapse">
+                <br>
+                <p>1. Goto “Apps” (in the “App Setup” / “Create” section) in your Salesforce Setup menu.</p>
+                <p>2. Click “New” in the “Connected Apps” section at the bottom of the page.</p>
+                <p>3. Type “OpenFn” in the “Connected App Name” field.</p>
+                <p>4. Type “OpenFn” in the “API Name” field.</p>
+                <p>5. Type your email in the “Contact Email” field.</p>
+                <p>6. Click “Enable OAuth Settings” in the “API (Enable OAuth Settings)” section.</p>
+                <p>7. Enter “https://login.salesforce.com” in the “Callback URL” field.</p>
+                <p>8. Add “Access and manage your data (api)” in the “Available OAuth Scopes” section.</p>
+                <p>9. Click “Save”.</p>
+                <p>10. Copy the “Consumer Key” and paste it here.</p>
+                <p>11. Click to reveal your “Consumer Secret”, then copy it and paste it here.</p>
+            </div>
+            </div>
           </div>
 
           <div class="form-group">
