--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -27,10 +27,10 @@
             Subscription Tier
           </div>
           <h4 class="title">
-            Small
+            Pilot A
           </h4>
           <div class="content">
-            $29/mo.
+            $ /mo.
           </div>
         </div>
         <div class="col-md-3 text-center">
@@ -38,12 +38,22 @@
             Maps
           </div><br>
           <div class="progress">
-            <div class="progress-bar " role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
-              1/3
+            <div class="progress-bar progress-bar-default"
+              role="progressbar"
+              aria-valuenow='<%= @mappings.where(enabled: true).count %>'
+              aria-valuemin="0"
+              aria-valuemax='<%= current_user.credits %>'
+              style="width: '(<%= @mappings.where(enabled: true).count %>/<%= current_user.credits %>)';">
+              <!-- Stu to #clean later. -->
+              <%= @mappings.where(enabled: true).count %>
             </div>
           </div>
           <div class="content">
-            0/3 auto-fetch
+
+<!-- Here -->
+            <%= @mappings.where(active: true).count %>/<%= current_user.credits %> auto-syncing
+          
+
           </div>
         </div>
         <div class="col-md-4 text-center">
@@ -51,12 +61,12 @@
             Jobs
           </div><br>
           <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100" style="width: 83%;">
-              83%
+            <div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="43" aria-valuemin="0" aria-valuemax="100" style="width: 43%;">
+              *uncapped*
             </div>
           </div>
           <div class="content">
-            (834 of 1,000/mo.)
+            *uncapped* of 1,000/mo.
           </div>
         </div>
         <!-- <div class="col-md-3">
