--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -44,16 +44,19 @@
 
         <div class="col-md-4">
           <h1><%= @user.credits %></h1>
-          <h4>Credits</h4>
+          <h4>Maps</h4>
         </div>
 
         <div class="col-md-4">
           <h1><%= @user.mappings.enabled.count %></h1>
-          <h4>Enabled Mappings</h4>
+          <h4>Enabled maps</h4>
         </div>
         
         <div class="col-md-4">
-          <div class="paypal-button">
+          <h1><i class="fa fa-credit-card"></i> / <i class="fa fa-cc-paypal"></i></h1>
+          <h4>Accepting cards &amp; Paypal soon.</h4>
+          
+<!--           <div class="paypal-button">
             <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
@@ -67,8 +70,11 @@
                 <tr>
                   <td>
                     <select name="os0" class="form-control">
-                      <option value="6 Months">6 Months $50.00 USD</option>
-                      <option value="12 Months">12 Months $75.00 USD</option>
+                      <option value="6 Months">Free $ /mo.</option>
+                      <option value="12 Months">Entry $ /mo.</option>
+                      <option value="12 Months">Startup $ /mo.</option>
+                      <option value="12 Months">Growth $ /mo.</option>
+                      <option value="12 Months">Enterprise $ /mo.</option>
                     </select>
                   </td>
                 </tr>
@@ -79,12 +85,9 @@
               <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
             </form>
             <br>
-          </div>
-          <!-- <div class="col-md-12"><br>
-            <p>Purchase credits for either 6 or 12 months at a time. After clicking "buy now" you'll be asked to specify the quantity. Each credit allows a single mapping to be enabled.</p> 
-            <p>We are shortly shifting to a more user-friendly payment system. Please bear with us in the interim!</p>    
           </div> -->
         </div>
+
       </div>
 
 <% end %>
