mapping, header padding, links

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -40,8 +40,8 @@ b, strong {
 
 .navbar {
   
-  //padding-top: rem-calc(55px);
-  //padding-bottom: rem-calc(20px);
+  padding-top: rem-calc(10px);
+  padding-bottom: rem-calc(10px);
 
   border: none;
   border-radius: 0;
