--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -142,3 +142,11 @@ input.destroy-field {
 .mapping-status-options {
   label { padding-right: 20px; }
 }
+
+.progress-bar-grey {
+  background: $light-grey;
+  }
+
+.progress-bar-bolt {
+  background: $grey-blue;
+}
