fixed font issue with navbar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,14 +5,24 @@
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
 </head>
   <body>
+      
       <%= render "shared/header" %>
     
       <div ng-view>
         <!--  Angular views get rendered here  -->
       </div>
       
+  
+
+
+
+
+
+
+
+  
   </body>
 </html>
