--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavBarCtrl">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-init="isCollapsed = true">
 <div class="top-shadow hidden-xs"></div>
 <!-- <div class="top-shadow-mobile"></div> -->
   <div class="container">
