--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,12 @@
 <html ng-app="the_bridge">
 <head>
   <title>OpenFn</title>
+  <script type="text/javascript">
+    window.featureFlags = {
+      new_mapping_page: <%= Features.new_mapping_page? %>
+    }
+  </script>
+  <base href="/">
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -9,7 +15,7 @@
 
   <% if Features.ga_tracking_code? %>
     <script>
-  
+
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -17,7 +23,7 @@
 
     ga('create', '<%= Features.ga_tracking_code %>', 'auto');
     // ga('send', 'pageview');
-  
+
     </script>
   <% end %>
 
@@ -34,20 +40,17 @@
     })
   </script>
 
-  <script>
-    function NavBarCtrl($scope) {
-    $scope.isCollapsed = true;
-    }
-  </script>
-
 </head>
   <body>
-      
-      <%= render "shared/header" %>
-    
-      <div ng-view>
-        <!--  Angular views get rendered here  -->
-      </div>
 
+    <%= render "shared/header" %>
+
+    <div ng-view>
+      <!--  Angular views get rendered here  -->
+    </div>
+
+    <div class='growl-wrapper'>
+      <div growl></div>
+    </div>
   </body>
 </html>
