--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="text/javascript">
+    window.featureFlags = {
+      new_mapping_page: <%= Features.new_mapping_page? %>
+    }
+  </script>
+
   <title>OpenFn</title>
+  <base href="/">
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -9,7 +16,7 @@
 
   <% if Features.ga_tracking_code? %>
     <script>
-    
+
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -41,22 +48,14 @@
 
 
 </head>
-  <body>
-      
-      <%= render "shared/header" %>
+<body>
+  <%= render "shared/header" %>
 
-      <%= render "shared/flash" %>
-      
-      <%= render "shared/sidebar" %>
+  <%= render "shared/flash" %>
 
-      <% if content_for?(:sidebar) %>
-        <div class='col-md-10'>
-      <% else %>
-          <div class='col-md-12'>
-      <% end %>
-      <%= yield %>
-          </div>
-        </div>
-  
-  </body>
+  <div class='col-md-12'>
+    <%= yield %>
+  </div>
+
+</body>
 </html>
