--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-57118569-2', 'auto');
-  // ga('send', 'pageview');
+  ga('send', 'pageview');
 
   </script>
 </head>
