--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,9 +17,12 @@
         <li>
           <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
         </li>
-<!--         <li>
+<!--    <li>
           <%= link_to "Pricing", "/#/pricing" %>
         </li> -->
+        <li>
+          <%= link_to "Devs", "/#/developers" %>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ideas <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
