final welcome changes

--- a/app/assets/stylesheets/welcome2.css.scss
+++ b/app/assets/stylesheets/welcome2.css.scss
@@ -10,7 +10,7 @@
         text-align: center;
         background-color: $primary-blue;
         background-image: image-url("bg-wow-1920.jpg");
-        //background-repeat: no-repeat;
+        background-repeat: no-repeat;
         background-position: top;
     }
 
