devs page mobile

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,8 +2,9 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
+    
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+        <span class="sr-only">Toggle navigation</span><i class="fa fa-bars" style="color: #3f5666"></i>
       </button>
       <a class="navbar-brand" href="/#/welcome">open[fn]</a>
     </div>
