--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -117,6 +117,18 @@
                     <%= f.label :password_confirmation %>
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                   </div>
+                  <div class="form-group">
+                    <%= f.label :first_name %>
+                    <%= f.text_field :first_name, class: 'form-control' %>
+                  </div>
+                  <div class="form-group">
+                    <%= f.label :last_name %>
+                    <%= f.text_field :last_name, class: 'form-control' %>
+                  </div>
+                  <div class="form-group">
+                    <%= f.label :organisation %>
+                    <%= f.text_field :organisation, class: 'form-control' %>
+                  </div>
                   <% if current_user %>
                     <%= f.submit "Update", class: 'btn btn-primary' %>
                   <% else %>
