--- a/app/assets/stylesheets/welcome2.css.scss
+++ b/app/assets/stylesheets/welcome2.css.scss
@@ -11,16 +11,14 @@
         background-color: $primary-blue;
         background-image: image-url("wow_bg.jpg");
         
-        background-repeat: no-repeat;
+        /*background-repeat: no-repeat;*/
         background-position: top;
     }
 
     .header-detail {
         background-image: image-url("wow_detail.png");
-        position: relative;
-        width: 100%;
-        height: 835px;
-
+        background-repeat: no-repeat;
+        background-position: top;
     }
 
     .headline {
