--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,16 +7,18 @@
   <%= csrf_meta_tags %>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
 
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <% if Features.ga_tracking_code? %>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-57118569-1', 'auto');
-  // ga('send', 'pageview');
+    ga('create', '<%= Features.ga_tracking_code %>', 'auto');
+    // ga('send', 'pageview');
 
-  </script>
+    </script>
+  <% end %>
 
 </head>
   <body>
@@ -26,15 +28,6 @@
       <div ng-view>
         <!--  Angular views get rendered here  -->
       </div>
-      
-  
 
-
-
-
-
-
-
-  
   </body>
 </html>
