shadow on navbar when scrolling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,17 @@
   ga('create', 'UA-57118569-1', 'auto');
   ga('send', 'pageview');
 
+  $(document).ready(function(){
+ $(window).scroll(function(){
+  var y = $(window).scrollTop();
+  if( y > 0 ){
+      $(".top-shadow").css({'display':'block', 'opacity':y/20});
+  } else {
+      $(".top-shadow").css({'display':'block', 'opacity':y/20});
+  }
+ });
+})
+
   </script>
 
 </head>
