--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -52,11 +52,12 @@ b, strong {
   
   padding-top: rem-calc(5px);
   padding-bottom: rem-calc(5px);
-
+  z-index: 2;
   border: none;
   border-radius: 0;
   background-color: $cream;
   background-image: image-url("noise.png");
+  position: fixed;
 
 
   .navbar-brand {
@@ -137,3 +138,16 @@ b, strong {
 /*    position: absolute;
     bottom: 20px;*/
 }
+
+.top-shadow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 74px;
+    z-index: -10;
+    -webkit-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
+    display: none;
+  }
