--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,8 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+
+
+<div class="top-shadow"></div>
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
