--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,8 @@
 
 
 
-<div class="top-shadow"></div>
+<div class="top-shadow hidden-xs"></div>
+<div class="top-shadow-mobile visible-xs"></div>
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
