--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-
-
-
 <div class="top-shadow hidden-xs"></div>
-<div class="top-shadow-mobile visible-xs"></div>
+<div class="top-shadow-mobile hidden-sm-md-lg"></div>
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
