--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,6 +45,12 @@
     })
   </script>
 
+  <script>
+    function NavBarCtrl($scope) {
+    $scope.isCollapsed = true;
+}
+  </script>
+
 </head>
   <body>
       
