--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,37 @@
   <%= csrf_meta_tags %>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
 
+  <% if Features.ga_tracking_code? %>
+    <script>
+    
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-57118569-1', 'auto');
+    ga('send', 'pageview');
+
+    </script>
+  <% end %>
+
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    $(document).ready(function(){
+      $(window).scroll(function(){
+        var y = $(window).scrollTop();
+        if( y > 0 ){
+        $(".top-shadow").css({'display':'block', 'opacity':y/20});
+      } else {
+        $(".top-shadow").css({'display':'block', 'opacity':y/20});
+        }
+      });
+    })
+  </script>
 
-  ga('create', 'UA-57118569-1', 'auto');
-  ga('send', 'pageview');
-
-  $(document).ready(function(){
- $(window).scroll(function(){
-  var y = $(window).scrollTop();
-  if( y > 0 ){
-      $(".top-shadow").css({'display':'block', 'opacity':y/20});
-  } else {
-      $(".top-shadow").css({'display':'block', 'opacity':y/20});
-  }
- });
-})
-
+  <script>
+    function NavBarCtrl($scope) {
+    $scope.isCollapsed = true;
+    }
   </script>
 
 </head>
