--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavBarCtrl">
 <div class="top-shadow hidden-xs"></div>
-<div class="top-shadow-mobile hidden-sm-md-lg"></div>
+<!-- <div class="top-shadow-mobile"></div> -->
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
     
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse">
+      <button type="button" class="navbar-toggle collapsed"  ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span><i class="fa fa-bars" style="color: #3f5666"></i>
       </button>
       <a class="navbar-brand" href="/#/welcome">open[fn]</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse collapse" id="nav-collapse">
+    <div class="navbar-collapse collapse" collapse="isCollapsed">
       
       <ul class="nav navbar-nav">
         <li>
