--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -54,7 +54,7 @@
       
         <% if current_user %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li>
                 <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
