Namespaced the controllers into OdkSfLegacy, moved views.

--- a/app/views/odk_sf_legacy/mappings/index.html.erb
+++ b/app/views/odk_sf_legacy/mappings/index.html.erb
@@ -2,13 +2,13 @@
 </div>
 <div class="ideas">
 
-<header class="header-image">
-  <div class="headline">
-    <h1><i class="fa fa-cubes"></i>
- open<strong>Integrations</strong></h1>
-    <h3>Your apps are <strong>better</strong> together.</h3>
-    </div>
-</header>
+  <header class="header-image">
+    <div class="headline">
+      <h1><i class="fa fa-cubes"></i>
+   open<strong>Integrations</strong></h1>
+      <h3>Your apps are <strong>better</strong> together.</h3>
+      </div>
+  </header>
 
   <div class="featurette mappings">
     <hr class="light">
@@ -20,7 +20,7 @@
     <div class="row">
 
         <div class="col-md-2 text-center"><br>
-          <%= button_to "Create new map", [:new, :mapping], class: 'btn btn-success' %>
+          <%= button_to "Create new map", [:new, :odk_sf_legacy_mapping], class: 'btn btn-success' %>
         </div>
         <div class="col-md-2 text-center">
           <div class="content">
