--- a/app/views/odk_sf_legacy/submissions/index.html.erb
+++ b/app/views/odk_sf_legacy/submissions/index.html.erb
@@ -17,7 +17,7 @@
     <div class="container">
 
 <ol class="breadcrumb">
-  <li><%= link_to "Mappings", :mappings %></li>
+  <li><%= link_to "Mappings", odk_sf_legacy_mappings_path %></li>
   <li><%= link_to @mapping.name, @mapping %></li>
   <li>Submissions</li>
 </ol>
