--- a/app/views/odk_sf_legacy/submissions/show.html.erb
+++ b/app/views/odk_sf_legacy/submissions/show.html.erb
@@ -17,13 +17,13 @@
     <div class="container">
 
 <ol class="breadcrumb">
-  <li><%= link_to "Mappings", :mappings %></li>
+  <li><%= link_to "Mappings", odk_sf_legacy_mappings_path %></li>
   <li><%= link_to @mapping.name, @mapping %></li>
   <li><%= link_to "Submissions", [@mapping, :submissions] %></li>
   <li>Submission <%= @submission.uuid %></li>
 </ol>
 
-<%= link_to "Reprocess", [:reprocess, @mapping, @submission], class: 'btn btn-danger pull-right', method: 'post', confirm: 'Are you sure?' if @submission.error? %>
+<%= link_to "Reprocess", reprocess_odk_sf_legacy_mapping_submission_path(@mapping, @submission), class: 'btn btn-danger pull-right', method: 'post', confirm: 'Are you sure?' if @submission.error? %>
 
 <h3>
   <dl>
