--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,7 @@
           <%= link_to "Marketplace", "/#/marketplace", 'ng-click' => "isCollapsed = !isCollapsed" %>
         </li>
         <li>
-          <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+          <%= link_to "Integrations", odk_sf_legacy_mappings_path, 'ng-click' => "$event.stopPropagation()" %>
         </li>
 <!--    <li>
           <%= link_to "Pricing", "/#/pricing" %>
