--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,22 +3,55 @@
 
 
     .header-image {
-        margin-top: -20px;
+        margin-top: -30px;
+        margin-bottom: -30px;
         width: 100%;
+        min-height: 835px;
         text-align: center;
-        background-color: $cream;
-        background-image: image-url("noise.png");
+        background-color: $primary-blue;
+        background-image: image-url("wow_bg.jpg");
+        
+        /*background-repeat: no-repeat;*/
+        background-position: top;
+    }
+
+    .header-detail {
+        background-image: image-url("wow_detail.png");
+        background-repeat: no-repeat;
+        background-position: top;
     }
 
     .headline {
-        padding: rem-calc(105px) 0 rem-calc(100px);
+        padding: rem-calc(80px) 0 rem-calc(25px);
+
+
     }
 
     .headline h3 {
       font-size: rem-calc(35px);
       font-weight: $bold;
       text-transform: uppercase;
-      color: $light-grey;
+      color: $off-white;
+    }
+
+    .numbers h3 {
+        font-size: rem-calc(35px);
+        font-weight: $bold;
+        margin-bottom: 0;
+        font-weight: $bold;
+        text-transform: uppercase;
+        color: $accent-yellow;
+        opacity: 0.8;
+
+    }
+
+    .numbers h4 {
+        font-size: rem-calc(20px);
+        font-weight: $bold;
+        margin-top: 0;
+        text-transform: uppercase;
+        color: $light-grey;
+        opacity: 0.6;
     }
 
     .featurette {
@@ -40,7 +73,7 @@
       }
       &.dark {
         background-color: $deeper-blue;
-        background-image: image-url("lighter-noise.png");
+        background-image: image-url("noise.png");
 
         .featurette-heading {
           color: $off-white;
@@ -86,7 +119,7 @@
       }
 
       .openintegrations-featurette-image {
-        background-image: image-url("openintegrations-featurette.png");
+        background-image: image-url("openintegrations-featurette2.png");
         background-repeat: no-repeat;
         background-size: 100%;
         height: 373px;
