--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,1 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<h2>Thanks, you paid signed up for a monthly plan @<strong>$79.00</strong> per month.</h2>
