--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag charges_path do %>
   <article>
     <label class="amount">
-      <span>Amount: $5.00</span>
+      <span>Amount: $79.00 per month.</span>
     </label>
   </article>
 
