--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -54,38 +54,11 @@
         
         <div class="col-md-4">
           <h1><i class="fa fa-credit-card"></i> / <i class="fa fa-cc-paypal"></i></h1>
-          <h4>Accepting cards &amp; Paypal soon.</h4>
-          
-<!--           <div class="paypal-button">
-            <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
-              <input type="hidden" name="custom" value="<%= @user.id %>">
-              <table>
-                <tr>
-                  <td>
-                      <input type="hidden" name="on0" value="Credits">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <select name="os0" class="form-control">
-                      <option value="6 Months">Free $ /mo.</option>
-                      <option value="12 Months">Entry $ /mo.</option>
-                      <option value="12 Months">Startup $ /mo.</option>
-                      <option value="12 Months">Growth $ /mo.</option>
-                      <option value="12 Months">Enterprise $ /mo.</option>
-                    </select>
-                  </td>
-                </tr>
-              </table>
-              <input type="hidden" name="currency_code" value="USD">
-              <br/>
-              <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-              <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-            </form>
-            <br>
-          </div> -->
+          <h4>Subscription</h4>
+          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="A month's subscription"
+          data-amount="500"></script>
         </div>
 
       </div>
